Fix buttons background when touch on them on mobiles

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 main {
